--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,9 @@
 	<classpathentry kind="lib" path="/usr/local/Mobicents-JSLEE/jboss-5.1.0.GA/lib/javassist.jar"/>
 	<classpathentry kind="lib" path="lib/mobicents-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/truezip-samples-7.7.2-jar-with-dependencies.jar"/>
+	<classpathentry kind="lib" path="lib/mongo-2.10.1.jar"/>
+	<classpathentry kind="lib" path="lib/morphia-0.99.jar"/>
+	<classpathentry kind="lib" path="lib/OperationsRepository.jar"/>
+	<classpathentry kind="lib" path="lib/PetriNets.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
